# openclawMail

./: .gitignore  AGENT_MAILBOX_SPEC.md  OPENCLAW_SETUP.md  README.md  SKILL.md  docker-compose.yml  mailbox-ws-daemon.service  nginx.conf.example  setup_prompt.md  test_e2e_mcp.py  ws_daemon.py
docs/plans/: agent-mailbox-implementation-plan.md
docs/research/: 2026-02-22-openclaw-api-research.md
mcp/: pyproject.toml  requirements.txt
mcp/mailbox_mcp/: __main__.py  config.py  mailbox_client.py  openclaw.py  server.py  ws_client.py
server/: .env.example  alembic.ini  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 001_initial_schema.py
server/app/: config.py  database.py  encryption.py  main.py  models.py  schemas.py  security.py  websocket.py  websocket_endpoint.py
server/app/routers/: agents.py  connections.py  inbox.py  messages.py
server/tests/: conftest.py  test_agents.py  test_connections.py  test_encryption.py  test_inbox.py  test_messages.py  test_websocket.py  test_websocket_manager.py
